<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignEnd="@+id/button_fecha"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="243dp"
        android:text="CANTIDAD DE HORAS"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_hora"
        tools:textSize="17sp" />

    <EditText
        android:id="@+id/txt_ingreseCantidad"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView21"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:hint="@string/txt_ingreseCantidad"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/editHora"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/inicio"
        android:layout_marginEnd="55dp"
        android:text="PAGAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        tools:textSize="20sp" />

    <Button
        android:id="@+id/inicio"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="55dp"
        android:text="regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.019"
        tools:textSize="20sp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="137dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginStart="42dp"
        android:text="TOTAL A PAGAR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        tools:textSize="17sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="224dp"
        android:layout_height="37dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="RESERVA POR HORAS"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="10"
        tools:textSize="22sp" />

    <Button
        android:id="@+id/button_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView22"
        android:layout_alignTop="@+id/editFecha"
        android:text="Seleccionar Fecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/button_hora"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@+id/textView21"
        android:layout_alignTop="@+id/editHora"
        android:text="seleccionar hora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_fecha" />

    <EditText
        android:id="@+id/editFecha"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editHora"
        android:layout_marginTop="106dp"
        android:ems="10"
        android:hint="@string/txt_ingreseFecha"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/button_fecha"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/editHora"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="182dp"
        android:ems="10"
        android:hint="@string/txt_ingreseHora"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/button_hora"
        app:layout_constraintTop_toBottomOf="@+id/editFecha"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="149dp"
        android:layout_marginEnd="29dp"
        android:text="6"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/txt_ingreseCantidad" />

</RelativeLayout>